# refactor-patternmatch-with-lens

./: .gitignore  README.md  refactor-patternmatch-with-lens.cabal
src/: Example.hs
src/Example/: InitFunction.hs  InitTypes.hs  InitTypes_flymake.hs  Internal.hs  Lens.hs  LiftedFunctions.hs  LiftedTypes.hs  Types.hs
test/: ExampleSpec.hs
