Name:                   refactor-patternmatch-with-lens
Version:                0.0.0
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Example
  Other-Modules:        Example.Internal
                        Example.Lens
                        Example.InitFunction
                        Example.InitTypes
                        Example.LiftedFunctions
                        Example.LiftedTypes


  Build-Depends:        base >= 4 && < 5
                       ,lens >= 4.4
                       ,random >= 1.1


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , lens >= 4.4
                       ,random >= 1.1



Source-Repository head
  Type:                 git
--  Location:             
